--- a/android/build.gradle
+++ b/android/build.gradle
@@ -62,6 +62,9 @@ android {
 
         // ML Kit barcode scanning dependency
         implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+        implementation 'com.google.mlkit:text-recognition:16.0.1'
+        implementation 'com.google.code.gson:gson:2.8.6'
+
     }
 
     testOptions {
