--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,6 +47,7 @@ android {
 
     defaultConfig {
         minSdk = 21
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     dependencies {
