--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -28,6 +28,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
@@ -35,6 +36,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
+
         }
     }
 }
