--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   web: ^1.0.0
   visibility_detector: ^0.4.0+2
   plugin_platform_interface: ^2.0.2
+  permission_handler: ^11.3.1
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
