--- a/android/build.gradle
+++ b/android/build.gradle
@@ -83,4 +83,5 @@ android {
 
 dependencies {
     implementation 'androidx.camera:camera-view:1.3.4'
+    implementation 'androidx.core:core:1.15.0'
 }
