--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: camera_kit_plus
 description: A Flutter Plugin Using Camera to Scan Barcodes
-version: 0.0.11
+version: 0.0.22
 homepage: https://github.com/MahmoodBakhshayesh/camera_kit_plus
 
 environment:
@@ -16,7 +16,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   plugin_platform_interface: ^2.0.2
   permission_handler: ^11.3.1
-  app_settings: ^5.1.1
+#  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
