--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: camera_kit_plus
 description: A Flutter Plugin Using Camera to Scan Barcodes
-version: 0.0.22
+version: 0.0.24
 homepage: https://github.com/MahmoodBakhshayesh/camera_kit_plus
 
 environment:
@@ -17,7 +17,11 @@ dependencies:
   visibility_detector: ^0.4.0+2
   plugin_platform_interface: ^2.0.2
   permission_handler: ^11.3.1
+#  camerakit: ^0.0.78-dev1
 #  app_settings: ^5.1.1
+
+dependency_overrides:
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
