--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: camera_kit_plus
 description: A Flutter Plugin Using Camera to Scan Barcodes
-version: 0.0.30
+version: 0.0.32
 homepage: https://github.com/MahmoodBakhshayesh/camera_kit_plus
 
 environment:
@@ -61,9 +61,9 @@ flutter:
         fileName: camera_kit_plus_web.dart
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/images/scanner_frame.png
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/to/asset-from-package
