--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,7 +54,8 @@ android {
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
         // CameraX dependencies
-        def camerax_version = "1.1.0-beta01"
+        // Change this line:
+        def camerax_version = "1.3.4"
         implementation "androidx.camera:camera-core:$camerax_version"
         implementation "androidx.camera:camera-camera2:$camerax_version"
         implementation "androidx.camera:camera-lifecycle:$camerax_version"
